add lms information

--- a/src/content/docs/en/nn-intro.mdx
+++ b/src/content/docs/en/nn-intro.mdx
@@ -59,3 +59,24 @@ Human brain:
 - approximately 10 billion neurons in the human cortex, and 60 trillion synapses or connections (Shepherd and Koch, 1990).
 - the energetic efficiency of the brain is approximately $10^{-16}$ joules (J)
 
+
+
+
+
+
+
+# My notes from HBRS NN
+
+## Computational Learning Theory
+
+Question: "when if you do well with training data if you will have small amount of our training data you will do well in the test data"
+
+- [Complete Statistical Theory of Learning (Vladimir Vapnik)](https://www.youtube.com/watch?v=Ow25mjFjSmg)
+- [Complete statistical theory of learning: learning using statistical invariants](https://proceedings.mlr.press/v128/vapnik20a.html#:~:text=Statistical%20theory%20of%20learning%20considers,called%20strong%20mode%20of%20convergence.)
+
+
+VC-dimension
+
+
+
+
