add backpropagation paper

--- a/src/content/docs/en/ai-history.mdx
+++ b/src/content/docs/en/ai-history.mdx
@@ -52,6 +52,10 @@ Facts:
 - [Minsky vs Rosenblatt](https://blogs.umass.edu/brain-wars/the-debates/minsky-vs-rosenblatt/)
 - [The AI Wars: lessons from the conflict that paralyzed the field](https://towardsdatascience.com/the-ai-wars-lessons-from-the-conflict-that-paralyzed-the-field-7344666c7875)
 
+## [1986]
+
+- [Learning representations by back-propagating errors](https://www.nature.com/articles/323533a0)
+
 ## External References
 
 - [Timeline of Deep Learning Highlights 1960-2013](https://people.idsia.ch/~juergen/firstdeeplearner.html) by Jürgen Schmidhuber
