add backpropagation references

--- a/src/content/docs/en/ai-history.mdx
+++ b/src/content/docs/en/ai-history.mdx
@@ -45,12 +45,19 @@ Facts:
 
 ## [1958]
 
+- []
 
 ## [1960 - 1970]
 
-
 - [Minsky vs Rosenblatt](https://blogs.umass.edu/brain-wars/the-debates/minsky-vs-rosenblatt/)
 - [The AI Wars: lessons from the conflict that paralyzed the field](https://towardsdatascience.com/the-ai-wars-lessons-from-the-conflict-that-paralyzed-the-field-7344666c7875)
+
+### [1970]
+
+- [The representation of the cumulative rounding error of an algorithm as a Taylor expansion of the local rounding errors.](https://people.idsia.ch/~juergen/linnainmaa1970thesis.pdf) Master's Thesis by S. Linnainmaa
+    - (1976) [Taylor expansion of the accumulated rounding error](https://link.springer.com/article/10.1007/BF01931367) by Seppo Linnainmaa
+    - (Video) [The birth of the backpropagation method](https://www.youtube.com/watch?v=1baZJns52Es) Keynote by Seppo Linnainmaa.
+
 
 ## [1986]
 
