add notes in SLAM research field

--- a/src/content/docs/en/slam-review.mdx
+++ b/src/content/docs/en/slam-review.mdx
@@ -26,7 +26,7 @@ export const components = {
 }
 
 
-## Simultaneous localization and mapping: part I
+## [2006] Simultaneous localization and mapping: part I
 
 
 ```
@@ -48,6 +48,9 @@ Two key computational solutions:
     - these correlations would grow with successive observations
 
 - 1995 the acronym SLAM is used for the first time. H. Durrant-Whyte, D. Rye, and E. Nebot. Localization of automatic guided vehicles.
+
+
+## [2006] Simultaneous Localisation and Mapping (SLAM): Part II State of the Art
 
 
 ## People
