--- a/src/content/docs/en/research-workflow.mdx
+++ b/src/content/docs/en/research-workflow.mdx
@@ -30,6 +30,31 @@ export const components = {
 - [Ten simple rules for reading a scientific paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7392212/) by Carey MA, Steiner KL, Petri WA Jr.
 - [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
 
+
+### The First Pass
+
+Steps:
+1. Carefully read the title, abstract, and introduction.
+2. Read the section and sub-section headings and take a quick look at the figures and tables.
+3. Read the conclusions.
+4. Glance over the references, mentally ticking off the ones you’ve already read.
+
+### The Second Pass (around a hour)
+
+1. Look carefully at the figures
+    - Are the axes properly labeled?
+    - Are results shown with error bars
+    - conclusions are statistically significant?
+2. Mark relevant unread references for further reading
+
+### The Third Pass
+
+To fully understand a paper (attempt to virtually re-implement the paper):
+- Requires great attention to detail.
+- pinpoint implicit assumptions
+- missing citations to relevant work
+
+
 Full review:
 - Authors
 - keywords
