update in research-workflow

--- a/src/content/docs/en/research-workflow.mdx
+++ b/src/content/docs/en/research-workflow.mdx
@@ -26,9 +26,9 @@ export const components = {
 
 ## How to Read a Paper
 
-- Some researchers from different fields comment on their process [How to (seriously) read a scientific paper](https://www.science.org/content/article/how-seriously-read-scientific-paper)
+- ✨ Some researchers from different fields comment on their process [How to (seriously) read a scientific paper](https://www.science.org/content/article/how-seriously-read-scientific-paper)
+- ✨ [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
 - [Ten simple rules for reading a scientific paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7392212/) by Carey MA, Steiner KL, Petri WA Jr.
-- [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
 
 
 ### The First Pass
@@ -51,24 +51,10 @@ Steps:
 
 To fully understand a paper (attempt to virtually re-implement the paper):
 - Requires great attention to detail.
-- pinpoint implicit assumptions
-- missing citations to relevant work
-
-
-Full review:
-- Authors
-- keywords
-- Abstract
-- Proposed approach
-- Method(s) for evaluating approach
-- Results
-- Conclusions
-- Contributions
-- Challenges (in the scope of work)
-- Personal notes:
-    - Relevance
-    - Discussion compared to other methods
-    - Open-ended research questions
+- Pinpoint implicit assumptions
+- Missing citations to relevant work
+- Discussion compared to other methods
+- Open-ended research questions
 
 ## Good Practices
 
@@ -91,3 +77,34 @@ Full review:
 7. Always store raw data behind plots
 8. Generate hierarchical analysis Output, allowing layers of increasing detail to be inspected
 9. Connect textual statements to underlying results
+
+
+## Conferences
+
+Neural Networks:
+- [NeurIPS](https://nips.cc/)
+
+Automation:
+- [International Conference on Control, Automation, Robotics and Vision (ICARCV)](https://www.ieee-ras.org/conferences-workshops/technically-co-sponsored/icarcv)
+- [IEEE International Conference on Advanced Robotics and Mechatronics (ICARM)](http://www.ieee-arm.org/)
+
+
+Filter conferences:
+- [Conferences Rank](http://www.conferenceranks.com/#data)
+- [Research.com in Machine learning](https://research.com/conference-rankings/computer-science/machine-learning)
+- [Research.com in Computer Science](https://research.com/conference-rankings/computer-science)
+- [Research.com in Neuroscience](https://research.com/conference-rankings/neuroscience)
+
+## Research Skills
+
+References from [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
+- [Writing reviews for systems conferences](https://people.inf.ethz.ch/troscoe/pubs/review-writing.pdf)
+- [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) H. Schulzrinne
+- [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf)
+
+Some resources from Simon Peyton Jones:
+- [Research skills: resources](https://simon.peytonjones.org/research-skills/)
+- [How to Write a Great Grant Proposal](https://simon.peytonjones.org/great-grant-proposal/)
+- [How to Write a Great Research Paper](https://simon.peytonjones.org/great-research-paper/)
+- [How to Give a Great Research Talk](https://simon.peytonjones.org/great-research-talk/)
+
