add more resources to research-workflow

--- a/src/content/docs/en/research-workflow.mdx
+++ b/src/content/docs/en/research-workflow.mdx
@@ -24,12 +24,27 @@ export const components = {
     p: P
 }
 
-## How to Read a Paper
+## Resources
 
+How to read:
 - ✨ Some researchers from different fields comment on their process [How to (seriously) read a scientific paper](https://www.science.org/content/article/how-seriously-read-scientific-paper)
 - ✨ [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
 - [Ten simple rules for reading a scientific paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7392212/) by Carey MA, Steiner KL, Petri WA Jr.
 
+How to write:
+- [How to Write a Great Grant Proposal](https://simon.peytonjones.org/great-grant-proposal/)
+- [How to Write a Great Research Paper](https://simon.peytonjones.org/great-research-paper/)
+- [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) H. Schulzrinne
+- [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf)
+
+How to review:
+- [Writing reviews for systems conferences](https://people.inf.ethz.ch/troscoe/pubs/review-writing.pdf)
+
+How present:
+- [How to Give a Great Research Talk](https://simon.peytonjones.org/great-research-talk/)
+
+Other resources:
+- [Research skills: resources](https://simon.peytonjones.org/research-skills/)
 
 ### The First Pass
 
@@ -58,8 +73,8 @@ To fully understand a paper (attempt to virtually re-implement the paper):
 
 ## Good Practices
 
-- [Ten Simple Rules for Better Figures](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4161295/) by Nicolas P. Rougier, Michael Droettboom and Philip E. Bourne
 - [Ten Simple Rules for Reproducible Computational Research](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3812051/) by Geir Kjetil Sandve, Anton Nekrutenko, James Taylor and Eivind Hovig
+- [Ten Simple Rules for Better Figures](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4161295/) by Nicolas P. Rougier, Michael Droettboom and Philip E. Bourne
 
 ### Ten Simple Rules for Reproducible Computational Research
 
@@ -77,7 +92,7 @@ To fully understand a paper (attempt to virtually re-implement the paper):
 7. Always store raw data behind plots
 8. Generate hierarchical analysis Output, allowing layers of increasing detail to be inspected
 9. Connect textual statements to underlying results
-
+10. Provide public access to scripts, runs, and results
 
 ## Conferences
 
@@ -88,23 +103,8 @@ Automation:
 - [International Conference on Control, Automation, Robotics and Vision (ICARCV)](https://www.ieee-ras.org/conferences-workshops/technically-co-sponsored/icarcv)
 - [IEEE International Conference on Advanced Robotics and Mechatronics (ICARM)](http://www.ieee-arm.org/)
 
-
 Filter conferences:
 - [Conferences Rank](http://www.conferenceranks.com/#data)
 - [Research.com in Machine learning](https://research.com/conference-rankings/computer-science/machine-learning)
 - [Research.com in Computer Science](https://research.com/conference-rankings/computer-science)
 - [Research.com in Neuroscience](https://research.com/conference-rankings/neuroscience)
-
-## Research Skills
-
-References from [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
-- [Writing reviews for systems conferences](https://people.inf.ethz.ch/troscoe/pubs/review-writing.pdf)
-- [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) H. Schulzrinne
-- [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf)
-
-Some resources from Simon Peyton Jones:
-- [Research skills: resources](https://simon.peytonjones.org/research-skills/)
-- [How to Write a Great Grant Proposal](https://simon.peytonjones.org/great-grant-proposal/)
-- [How to Write a Great Research Paper](https://simon.peytonjones.org/great-research-paper/)
-- [How to Give a Great Research Talk](https://simon.peytonjones.org/great-research-talk/)
-
