--- a/src/content/docs/en/research-workflow.mdx
+++ b/src/content/docs/en/research-workflow.mdx
@@ -24,27 +24,14 @@ export const components = {
     p: P
 }
 
-## Resources
+
+
+## How to Read
 
 How to read:
 - ✨ Some researchers from different fields comment on their process [How to (seriously) read a scientific paper](https://www.science.org/content/article/how-seriously-read-scientific-paper)
 - ✨ [How to Read a Paper](https://dl.acm.org/doi/10.1145/1273445.1273458) by S. Keshav David R. Cheriton
 - [Ten simple rules for reading a scientific paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7392212/) by Carey MA, Steiner KL, Petri WA Jr.
-
-How to write:
-- [How to Write a Great Grant Proposal](https://simon.peytonjones.org/great-grant-proposal/)
-- [How to Write a Great Research Paper](https://simon.peytonjones.org/great-research-paper/)
-- [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) H. Schulzrinne
-- [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf)
-
-How to review:
-- [Writing reviews for systems conferences](https://people.inf.ethz.ch/troscoe/pubs/review-writing.pdf)
-
-How present:
-- [How to Give a Great Research Talk](https://simon.peytonjones.org/great-research-talk/)
-
-Other resources:
-- [Research skills: resources](https://simon.peytonjones.org/research-skills/)
 
 ### The First Pass
 
@@ -70,6 +57,69 @@ To fully understand a paper (attempt to virtually re-implement the paper):
 - Missing citations to relevant work
 - Discussion compared to other methods
 - Open-ended research questions
+
+## How to Write
+
+How to write:
+- ✨✨ [The Elements of Style](https://en.wikipedia.org/wiki/The_Elements_of_Style) by Strunk and White. This is a general book on the rules of the English language that helps to improve writing style.
+- ✨ [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf) by George. M. Whitesides
+- ✨ [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) by H. Schulzrinne. Focus on computer science and electrical engineering, systems and networks.
+- [How to Write a Great Grant Proposal](https://simon.peytonjones.org/great-grant-proposal/)
+- [How to Write a Great Research Paper](https://simon.peytonjones.org/great-research-paper/)
+
+From [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf):
+- Create a Outline (define the story to tell), to organize the structure:
+    - objetive
+    - hypotheses
+    - conclusions
+- Questions to answer in the outline:
+    - Why did I do this work?
+    - What does it mean?
+    - What hypotheses did I mean to test?
+    - What ones did I actually test?
+    - What were the results?
+- Content of the outline
+    1. Title
+    2. Authors
+    3. Abstract (Do not write an abstract)
+    4. Introduction
+        - Objetives
+        - Justification
+        - Background
+        - Guidance to the reader
+        - Summary/conclusions
+        - Sections and sub-sections (in advanced revisions of the outline)
+    5. Results and Discussion
+    6. Conclusions
+    7. Experimental
+- Style notes:
+    - *"this"* + noun (always)
+    - Use **active voice**
+    - Complete all comparisons: E.g. "The yield was higher using bromine **than chlorine**."
+
+
+From [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) by H. Schulzrinne.
+- There are four types of technical results:
+    - An algorithm
+    - A system construct; hardware, software, protocols, etc.
+    - A performance evaluation
+    - A theory
+- A paper should focus on (one to one copy from the document):
+    - Describing the results in sufficient details to establish their validity.
+    - Identifying the novel aspects of the results, i.e., what new knowledge is reported and what makes it non-obvious.
+    - Identifying the significance of the results: what improvements and impact do they suggest.
+
+## How to Review
+
+How to review:
+- [Writing reviews for systems conferences](https://people.inf.ethz.ch/troscoe/pubs/review-writing.pdf)
+
+## How to Present
+
+How present:
+- [How to Give a Great Research Talk](https://simon.peytonjones.org/great-research-talk/)
+Other resources:
+- [Research skills: resources](https://simon.peytonjones.org/research-skills/)
 
 ## Good Practices
 
