add more info in probability

--- a/src/content/docs/en/probability.mdx
+++ b/src/content/docs/en/probability.mdx
@@ -97,6 +97,20 @@ Examples of Not closed under addition:
 
 ### Closed Under Union
 
+## Random Variable
+
+<Equation
+    formula="X: \Omega \rightarrow \mathcal{T}"
+    description="Definition of a random variable"
+/>
+
+## Discrete and Continuous
+
+<Drawio
+    file="probability.drawio"
+    page="3"
+/>
+
 ## External Resources
 
 - [Probability Essentials by Jean Jacod, Philip Protter](https://link.springer.com/book/10.1007/978-3-642-55682-1) chapter 2.
