just sync everything xD

--- a/src/content/docs/en/ml-intro.mdx
+++ b/src/content/docs/en/ml-intro.mdx
@@ -30,3 +30,29 @@ The important take a way here:
 Who do we measure learning?
 - performance measure
 - learning = optimization
+
+## Probability Theory
+
+Check my notes in [probability](/en/probability) for more details.
+
+Basic rules:
+- sum rule
+- product rule
+
+<Equation
+    formula="P(X) = \sum_{Y} P(X, Y)"
+    description="Sum rule of probability."
+/>
+
+<Equation
+    formula="P(X,Y) = P(Y|X)P(X)"
+    description="Product rule of probability."
+/>
+
+<Equation
+    formula="P(Y,X) = \frac{P(X, Y) P(Y)}{P(X)}"
+    description="Bayes’ theorem"
+/>
+
+
+
