--- a/src/content/docs/en/probability.mdx
+++ b/src/content/docs/en/probability.mdx
@@ -114,3 +114,6 @@ Examples of Not closed under addition:
 ## External Resources
 
 - [Probability Essentials by Jean Jacod, Philip Protter](https://link.springer.com/book/10.1007/978-3-642-55682-1) chapter 2.
+
+
+this is a vector: $\va$ $\mathbf{a}$
