--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -26,13 +26,13 @@ export const components = {
 
 If you are wondering:
 
-> Do I need to learn to ROS 1 to be able to learn ROS 2 (or vice versa), the answer is NO. (what? you expected a more elaborated answer?... I'm to lazy to write it down)
+> Do I need to learn to ROS 1 to be able to learn ROS 2 (or vice versa), the answer is NO. (what? you expected a more elaborated answer?... I'm too lazy to write it down)
 
 ## Prerequisites for Diving
 
 - Familiarity with Ubuntu's desktop environment
-- The GNU/Linux file system
-- Basics with the terminal (bash)
+- Understand GNU/Linux file system
+- Proficiency with basic terminal commands (bash)
 
 Install ROS:
 - Check the official documentation, and follow [Ubuntu Debian packages (recommended)](https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html)
